New AZ Active Dir sign in

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,6 +10,69 @@
 				"$msCompile"
 			],
 			"group": "build"
+		},
+		{
+			"label": "Build MotorsportsPhysics",
+			"type": "shell",
+			"command": "dotnet build .\\MotorsportsPhysics\\MotorsportsPhysics.sln",
+			"isBackground": false,
+			"group": "build"
+		},
+		{
+			"label": "Build MotorsportsPhysics",
+			"type": "shell",
+			"command": "dotnet build .\\MotorsportsPhysics\\MotorsportsPhysics.sln",
+			"isBackground": false,
+			"group": "build"
+		},
+		{
+			"label": "Build MotorsportsPhysics",
+			"type": "shell",
+			"command": "dotnet build .\\MotorsportsPhysics\\MotorsportsPhysics.sln",
+			"isBackground": false,
+			"group": "build"
+		},
+		{
+			"label": "Build MotorsportsPhysics",
+			"type": "shell",
+			"command": "dotnet build .\\MotorsportsPhysics\\MotorsportsPhysics.sln",
+			"isBackground": false,
+			"group": "build"
+		},
+		{
+			"label": "Build MotorsportsPhysics",
+			"type": "shell",
+			"command": "dotnet build .\\MotorsportsPhysics\\MotorsportsPhysics.sln",
+			"isBackground": false,
+			"group": "build"
+		},
+		{
+			"label": "Build MotorsportsPhysics",
+			"type": "shell",
+			"command": "dotnet build .\\MotorsportsPhysics\\MotorsportsPhysics.sln",
+			"isBackground": false,
+			"group": "build"
+		},
+		{
+			"label": "Build MotorsportsPhysics",
+			"type": "shell",
+			"command": "dotnet build .\\MotorsportsPhysics\\MotorsportsPhysics.sln",
+			"isBackground": false,
+			"group": "build"
+		},
+		{
+			"label": "Build MotorsportsPhysics",
+			"type": "shell",
+			"command": "dotnet build .\\MotorsportsPhysics\\MotorsportsPhysics.sln",
+			"isBackground": false,
+			"group": "build"
+		},
+		{
+			"label": "Build MotorsportsPhysics",
+			"type": "shell",
+			"command": "dotnet build .\\MotorsportsPhysics\\MotorsportsPhysics.sln",
+			"isBackground": false,
+			"group": "build"
 		}
 	]
 }
