--- a/MotorsportsPhysics/appsettings.Development.json
+++ b/MotorsportsPhysics/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:physicsgameserver.database.windows.net,1433;Initial Catalog=usersDB;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=\"Active Directory Default\";"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
