--- a/.github/workflows/main_motorsportphysics.yml
+++ b/.github/workflows/main_motorsportphysics.yml
@@ -21,12 +21,14 @@ jobs:
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '10.x'
+          dotnet-version: '8.0.x'
 
       - name: Build with dotnet
+        working-directory: MotorsportsPhysics
         run: dotnet build --configuration Release
 
       - name: dotnet publish
+        working-directory: MotorsportsPhysics
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
